<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Question Text -->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>

    <!-- True Button -->
    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:layout_marginBottom="10dp"/>

    <!-- False Button -->
    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        android:layout_marginBottom="10dp"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_marginBottom="10dp"/>

    <!-- Previous Button -->
    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        android:layout_marginBottom="20dp"/>

    <!-- Language Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnSinhala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="සිංහල"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnTamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="தமிழ்"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_button"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</LinearLayout>